# task_django_jwt

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/account/: models.py
app/account/migrations/: 0001_initial.py  0002_refreshtoken.py  0003_account_phone.py  0004_alter_account_managers_refreshtoken_payload.py
app/api/: auth.py
app/api/v1/: endpoints.py  routers.py  shemas.py
app/settings/: asgi.py  base.py  urls.py  wsgi.py
